# erp-be

./: Makefile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 022007d78798_add_created_date_to_conversion_table.py  1188c7623fb5_add_sup_id_in_item.py  1e760f6d2ec0_journal_tbl_update.py  294fc220c563_remove_account_data_from_emp_table.py  31f62db5636a_alter_menu_table_name_into_title.py  3301441b4e81_init_db.py  4da9131b2fad_add_menu_table.py  4e51764951d7_migrate_invoice_tbl.py  53df0b7a2a5c_change_dept_id_to_manager_id_emp_table.py  574b3ec306e3_add_invoice_table.py  5c164440e20c_add_relation_dept_pos_table.py  5dd47218942b_sync_alembic.py  66fe10a20e96_add_emp_status.py  6b350edb4ee9_upd_mod_date_dept_emp_table.py  739b57e7d644_add_journal_tables.py  984817fce63d_drop_level_col_pos_table.py  9b532148a4ad_upd_mod_date_dept_table.py  aa29fd27a12d_add_stock_bal_constraint_del_qty_avail.py  af3a691d9346_default_active_for_create_uom_conversion.py  c02bacc5da09_add_cust_sales_order_table.py  c242a275a464_add_cols_emp_table.py  c4799188e6d4_change_menu_id_to_str_cuid.py  d8dc91f2f8dc_add_mod_date_pos_table.py  dc8ebc26370f_update_account_tbl.py
src/: main.py  utils.py
src/core/: db.py
src/core/models/accounting/: account.py  journal.py
src/core/models/hr/: department.py  employee.py  (+1 more)
src/core/settings/: config.py  database.py  security.py
src/modules/hr/: router.py
src/v1/accounting/: router.py
src/v1/admin/: router.py
src/v1/hr/: router.py
src/v1/inventory/: router.py
src/v1/purchasing/: router.py
src/v1/sales/: router.py
(+117 files in other folders)
